# langchain-opensearch-mcp

./: .env.example  README.md  docker-compose.yml  pyproject.toml  skills.md  streamlit_app.py
constant/: AIResponse.py
services/: llm_factory.py  llm_service.py  mcp_service.py  skill_service.py
