[project]
name = "opensearchllm"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.2.17",
    "langchain-classic>=1.0.4",
    "langchain-core>=1.3.2",
    "langchain-google-genai>=4.2.2",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-nvidia-ai-endpoints>=1.2.1",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "mcp>=1.27.0",
    "opensearch-mcp-server>=2.0.1",
    "opensearch-mcp-server-py>=0.9.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.56.0",
]
